--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "News App",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "node ./server/index.js"
   },
   "repository": {
     "type": "git",
